--- a/index.html
+++ b/index.html
@@ -1,59 +1,121 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Froze Kino</title>
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js"></script>
   <style>
     body {
       margin: 0;
-      padding: 0;
-      background-color: #111;
+      background-color: #000;
       color: white;
-      font-family: 'Segoe UI', sans-serif;
+      font-family: Arial, sans-serif;
+    }
+
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem;
+      background: #111;
     }
 
     .logo {
-      position: absolute;
-      top: 20px;
-      left: 30px;
-      font-size: 28px;
+      font-size: 1.4rem;
       font-weight: bold;
-      color: #00f0ff;
-      text-shadow: 0 0 10px #00f0ff, 0 0 20px #00f0ff;
-      letter-spacing: 1px;
-      user-select: none;
     }
 
-    .container {
+    .profile {
+      position: relative;
+      cursor: pointer;
+    }
+
+    .profile-icon {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      background: #555;
       display: flex;
-      justify-content: center;
       align-items: center;
-      height: 100vh;
+      justify-content: center;
+    }
+
+    .dropdown {
+      position: absolute;
+      top: 50px;
+      right: 0;
+      background: #222;
+      border-radius: 5px;
+      overflow: hidden;
+      display: none;
       flex-direction: column;
     }
 
-    button {
-      background-color: #ff9800;
+    .dropdown button {
+      background: none;
       color: white;
-      font-size: 18px;
-      padding: 15px 30px;
       border: none;
-      border-radius: 10px;
+      padding: 10px 20px;
+      text-align: left;
       cursor: pointer;
-      margin-top: 20px;
+    }
+
+    .dropdown button:hover {
+      background: #333;
     }
   </style>
 </head>
 <body>
-  <div class="logo">Froze Kino</div>
-
-  <div class="container">
-    <h1>Добро пожаловать!</h1>
-    <button onclick="Telegram.WebApp.sendData('Hello to Ezra Sterlbog')">
-      Отправить привет в бота
-    </button>
+  <div class="header">
+    <div class="logo">froze kino</div>
+    <div class="profile" onclick="toggleDropdown()">
+      <div class="profile-icon">👤</div>
+      <div class="dropdown" id="dropdown">
+        <button onclick="signIn()">Войти</button>
+        <button onclick="signIn()">Зарегистрироваться</button>
+      </div>
+    </div>
   </div>
+
+  <script>
+    // Firebase config
+    const firebaseConfig = {
+      apiKey: "AIzaSyC84hJqdAk8TDRxRWbv8pC9sqJ4OdsXzrU",
+      authDomain: "frozekino.firebaseapp.com",
+      projectId: "frozekino",
+      storageBucket: "frozekino.firebasestorage.app",
+      messagingSenderId: "623641197890",
+      appId: "1:623641197890:web:6675b451e5c05a69319cdb",
+      measurementId: "G-8NPR6RLHFZ"
+    };
+
+    // Инициализация Firebase
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+
+    // Показать/скрыть дропдаун
+    function toggleDropdown() {
+      const menu = document.getElementById("dropdown");
+      menu.style.display = menu.style.display === "flex" ? "none" : "flex";
+    }
+
+    // Войти через Google
+    function signIn() {
+      const provider = new firebase.auth.GoogleAuthProvider();
+      auth.signInWithPopup(provider)
+        .then(result => {
+          const user = result.user;
+          alert(`Добро пожаловать, ${user.displayName}!`);
+          // здесь можно показать фото, имя и т.д.
+        })
+        .catch(error => {
+          console.error(error);
+          alert("Ошибка входа");
+        });
+    }
+  </script>
 </body>
 </html>
 
