--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Froze Kino</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
       background: #0d0d0d;
+      font-family: 'Poppins', sans-serif;
       color: white;
     }
 
@@ -16,33 +17,32 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 20px 40px;
+      padding: 14px 20px;
       background: #141414;
       position: relative;
+      flex-wrap: wrap;
     }
 
     .left-side {
       display: flex;
       align-items: center;
-      gap: 20px;
+      gap: 15px;
     }
 
     .logo {
-      font-size: 26px;
-      font-weight: bold;
-      color: #ff3c3c;
+      font-size: 22px;
+      font-weight: 700;
+      background: linear-gradient(135deg, #00f0ff, #ff3c3c);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-shadow: 0 0 10px rgba(255,255,255,0.3);
       cursor: pointer;
-      transition: 0.3s ease;
-    }
-
-    .logo:hover {
-      color: #ff6666;
     }
 
     .search-box {
       background: #1f1f1f;
-      padding: 8px 15px;
-      border-radius: 25px;
+      padding: 6px 12px;
+      border-radius: 20px;
       display: flex;
       align-items: center;
       box-shadow: 0 0 4px rgba(0,0,0,0.5);
@@ -53,8 +53,8 @@
       border: none;
       outline: none;
       color: white;
-      width: 150px;
-      padding: 5px;
+      width: 140px;
+      padding: 4px;
     }
 
     .search-box input::placeholder {
@@ -62,8 +62,8 @@
     }
 
     .profile {
-      width: 40px;
-      height: 40px;
+      width: 36px;
+      height: 36px;
       border-radius: 50%;
       background: #444;
       cursor: pointer;
@@ -72,8 +72,8 @@
 
     .dropdown {
       position: absolute;
-      top: 70px;
-      right: 40px;
+      top: 60px;
+      right: 20px;
       background: #222;
       border: 1px solid #333;
       border-radius: 8px;
@@ -86,7 +86,7 @@
       background: none;
       border: none;
       color: white;
-      padding: 10px 20px;
+      padding: 10px 15px;
       cursor: pointer;
       text-align: left;
     }
@@ -99,29 +99,33 @@
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.8);
+      background: rgba(0, 0, 0, 0.85);
       display: none;
       justify-content: center;
       align-items: center;
       z-index: 9;
+      padding: 10px;
     }
 
     .form-box {
       background: #1c1c1c;
-      padding: 30px;
+      padding: 25px 20px;
       border-radius: 12px;
-      width: 300px;
+      width: 100%;
+      max-width: 320px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.5);
     }
 
     .form-box h2 {
       margin-top: 0;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
+      text-align: center;
       color: #fff;
     }
 
     .form-box input {
       width: 100%;
-      margin-bottom: 15px;
+      margin-bottom: 12px;
       padding: 10px;
       border: none;
       border-radius: 6px;
@@ -143,14 +147,22 @@
     .form-box button:hover {
       background: #e53939;
     }
+
+    @media (max-width: 480px) {
+      .logo { font-size: 20px; }
+      .search-box input { width: 100px; }
+      .profile { width: 32px; height: 32px; }
+      .dropdown { top: 55px; right: 15px; }
+    }
   </style>
 </head>
 <body>
+
   <header>
     <div class="left-side">
       <div class="logo" onclick="location.reload()">Froze Kino</div>
       <div class="search-box">
-        <input type="text" placeholder="Поиск фильмов..." />
+        <input type="text" placeholder="Поиск..." />
       </div>
     </div>
     <div class="profile" onclick="toggleDropdown()">
@@ -162,9 +174,7 @@
   </header>
 
   <div class="overlay" id="overlay">
-    <div class="form-box" id="formBox">
-      <!-- Форма появится через JS -->
-    </div>
+    <div class="form-box" id="formBox"></div>
   </div>
 
   <script>
@@ -206,5 +216,6 @@
       }
     });
   </script>
+
 </body>
 </html>
